styles for header

--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,8 @@
     top: 0;
     z-index: 100;
     background: var(--main-color);
-    color: #fff;    
+    color: #fff;
+    overflow-y: auto;
 }
 
 .sidebar-header {
@@ -48,3 +49,24 @@
 .sidebar a span:last-child {
     padding-left: 0.6rem;
 }
+
+.main-content {
+    position: relative;
+    margin-left: 240px;
+}
+
+header {
+    position: fixed;
+    top: 0;
+    left: 240px;
+    z-index: 100;
+    width: calc(100% - 240px);
+    background: #fff;
+    height: 60px;
+    padding: 0rem 1rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 1px solid #ccc;
+}
+
