--- a/styles.css
+++ b/styles.css
@@ -1,72 +1,249 @@
 :root {
-    --main-color: #027581;
-    --color-dark: #1d2231;
-    --text-gray: #8390a2;
+	--main-color: #027581;
+	--color-dark: #1d2231;
+	--text-gray: #8390a2;
 }
 
 * {
-    font-family: 'Poppins', sans-serif;
-    margin: 0;
-    padding: 0;
-    text-decoration: none;
-    list-style-type: none;
-    box-sizing: border-box;
+	font-family: 'Poppins', sans-serif;
+	margin: 0;
+	padding: 0;
+	text-decoration: none;
+	list-style-type: none;
+	box-sizing: border-box;
 }
 
 .sidebar {
-    height: 100%;
-    width: 240px;
-    position: fixed;
-    left: 0;
-    top: 0;
-    z-index: 100;
-    background: var(--main-color);
-    color: #fff;
-    overflow-y: auto;
+	height: 100%;
+	width: 240px;
+	position: fixed;
+	left: 0;
+	top: 0;
+	z-index: 100;
+	background: var(--main-color);
+	color: #fff;
+	overflow-y: auto;
 }
 
 .sidebar-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 60px;
-    padding: 0rem 1rem;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	height: 60px;
+	padding: 0rem 1rem;
 }
 
 .sidebar-menu {
-    padding: 1rem;
+	padding: 1rem;
 }
 
 .sidebar li {
-    margin-bottom: 1.2rem;
+	margin-bottom: 1.2rem;
 }
 
 .sidebar a {
-    color: #fff;
-    font-size: 0.9rem;
+	color: #fff;
+	font-size: 0.9rem;
 }
 
 .sidebar a span:last-child {
-    padding-left: 0.6rem;
+	padding-left: 0.6rem;
 }
 
 .main-content {
-    position: relative;
-    margin-left: 240px;
+	position: relative;
+	margin-left: 240px;
 }
 
 header {
-    position: fixed;
-    top: 0;
-    left: 240px;
-    z-index: 100;
-    width: calc(100% - 240px);
-    background: #fff;
-    height: 60px;
-    padding: 0rem 1rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    border-bottom: 1px solid #ccc;
+	position: fixed;
+	top: 0;
+	left: 240px;
+	z-index: 100;
+	width: calc(100% - 240px);
+	background: #fff;
+	height: 60px;
+	padding: 0rem 1rem;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	border-bottom: 1px solid #ccc;
 }
 
+.search-wrapper {
+	display: flex;
+	align-items: center;
+}
+
+.search-wrapper input {
+	border: 0;
+	outline: 0;
+	padding: 1rem;
+	height: 38px;
+}
+
+.social-icons {
+	display: flex;
+	align-items: center;
+}
+
+.social-icons span,
+.social-icons div {
+	margin-left: 1rem;
+}
+
+.social-icons div {
+	height: 40px;
+	width: 40px;
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-image: url(img/1.jpg);
+	border-radius: 50%;
+}
+
+main {
+	margin-top: 60px;
+	background: #f1f5f9;
+	min-height: 90vh;
+	padding: 1rem 3rem;
+}
+
+.dash-title {
+	color: var(--color-dark);
+	margin-bottom: 1rem;
+}
+
+.dash-cards {
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	gap: 3rem;
+}
+
+.card-single {
+	background: #fff;
+	border-radius: 7px;
+	box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
+}
+
+.card-body {
+	padding: 1.3rem 1rem;
+	display: flex;
+	align-items: center;
+}
+
+.card-body span {
+	font-size: 1.5rem;
+	color: #777;
+	padding-right: 1.4rem;
+}
+
+.card-body h5 {
+	color: var(--text-gray);
+	font-size: 1rem;
+}
+
+.card-body h4 {
+	color: var(--color-dark);
+	font-size: 1.1rem;
+	margin-top: 0.2rem;
+}
+
+.card-footer {
+	padding: 0.2rem 1rem;
+	background: #f9fafc;
+}
+
+.card-footer a {
+	color: var(--main-color);
+}
+
+.recent {
+	margin-top: 3rem;
+	margin-bottom: 3rem;
+}
+
+.activity-grid {
+	display: grid;
+	grid-template-columns: 75% 25%;
+	gap: 1.5rem;
+}
+
+.activity-card {
+	background: #fff;
+	border-radius: 7px;
+}
+
+.activity-card h3 {
+	color: var(--text-gray);
+	margin: 1rem;
+}
+
+.activity-card table {
+	width: 100%;
+	border-collapse: collapse;
+}
+
+.activity-card thead  {
+	background: #efefef;
+	text-align: left;
+}
+
+th, td {
+	font-size: 0.9rem;
+	padding: 1rem 0.5rem;
+	color: var(--color-dark);
+}
+
+td {
+	font-size: 0.8rem;
+}
+
+tbody tr:nth-child(even) {
+	background: #f9fafc;
+}
+
+.badge {
+	padding: 0.2rem 1rem;
+	border-radius: 20px;
+	font-weight: 700;
+	font-size: 0.7rem;
+}
+
+.badge.success {
+	background: #def7ec;
+	color: var(--main-color);
+}
+
+.badge.warning {
+	background: #f0f6b2;
+	color: orange;
+}
+
+.td-team {
+	display: flex;
+	align-items: center;	
+}
+
+.img-1,
+.img-2,
+.img-3 {
+	height: 38px;
+	width: 38px;
+	border-radius: 50%;
+	margin-left: -15px;
+	border: 3px solid #efefef;
+	background-size: cover;
+	background-repeat: no-repeat;
+}
+
+.img-1 {
+	background-image: url(img/2.jpg);
+}
+
+.img-2 {
+	background-image: url(img/3.jpg);
+}
+
+.img-3 {
+	background-image: url(img/4.jpg);
+}
