--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,7 @@
 	background: var(--main-color);
 	color: #fff;
 	overflow-y: auto;
+	transition: width 500ms;
 }
 
 .sidebar-header {
@@ -54,15 +55,34 @@
 	padding-left: 0.6rem;
 }
 
-#sidebar-toggle:checked ~ .sidebar .sidebar-header h3 span:last-child,
+#sidebar-toggle:checked ~ .sidebar {
+	width: 60px;
+}
+
+#sidebar-toggle:checked ~ .sidebar .sidebar-header h3 span,
 #sidebar-toggle:checked ~ .sidebar li span:last-child {
 	display: none;
 }
 
+#sidebar-toggle:checked ~ .sidebar .sidebar-header,
+#sidebar-toggle:checked ~ .sidebar li {
+	display: flex;
+	justify-content: center;
+}
+
+#sidebar-toggle:checked ~ .main-content {
+	margin-left: 60px;
+}
+
+#sidebar-toggle:checked ~ .main-content header {
+	left: 60px;
+	width: calc(100% - 60px);
+}
 
 .main-content {
 	position: relative;
 	margin-left: 240px;
+	transition: margin-left 500ms;
 }
 
 header {
@@ -78,6 +98,7 @@ header {
 	align-items: center;
 	justify-content: space-between;
 	border-bottom: 1px solid #ccc;
+	transition: left 500ms;
 }
 
 .search-wrapper {
@@ -320,4 +341,92 @@ tbody tr:nth-child(even) {
 	border: 1px solid var(--main-color);
 	border-radius: 4px;
 	padding: 0.4rem 1rem ;
+}
+
+.table-responsive {
+	overflow-x: auto;
+}
+
+@media only screen and (max-width: 1200px) {
+	.sidebar {
+		width: 60px;
+		z-index: 150;
+	}
+	
+	.sidebar .sidebar-header h3 span,
+	.sidebar li span:last-child {
+		display: none;
+	}
+	
+	.sidebar .sidebar-header,
+	.sidebar li {
+		display: flex;
+		justify-content: center;
+	}
+	
+	.main-content {
+		margin-left: 60px;
+	}
+	
+	.main-content header {
+		left: 60px;
+		width: calc(100% - 60px);
+	}
+
+	#sidebar-toggle:checked ~ .sidebar {
+		width: 240px;
+	}
+	
+	#sidebar-toggle:checked ~ .sidebar .sidebar-header h3 span,
+	#sidebar-toggle:checked ~ .sidebar li span:last-child {
+		display: inline;
+	}
+	
+	#sidebar-toggle:checked ~ .sidebar .sidebar-header {
+		display: flex;
+		justify-content: space-between;
+	}
+
+	#sidebar-toggle:checked ~ .sidebar li {
+		display: block;
+	}
+	
+	#sidebar-toggle:checked ~ .main-content {
+		margin-left: 60px;
+	}
+	
+	#sidebar-toggle:checked ~ .main-content header {
+		left: 60px;
+	}	
+}
+
+@media only screen and (max-width: 860px) {
+	.dash-cards {
+		grid-template-columns: repeat(2, 1fr);
+	}
+
+	.card-single {
+		margin-bottom: 1rem;
+	}
+
+	.activity-grid {
+		display: block;
+	}
+
+	.activity-card {
+		margin-bottom: 1.5rem;
+	}
+}
+
+@media only screen and (max-width: 600px) {
+	.dash-cards {
+		grid-template-columns: 100%;
+	}
+}
+
+@media only screen and (max-width: 450px) {
+	main {
+		padding-left: 1rem;
+		padding-right: 1rem;
+	}
 }
